# flask-pydantic-api

./: CHANGES.rst  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yaml
flask_pydantic_api/: __init__.py  api_wrapper.py  apidocs_views.py  openapi.py  utils.py
flask_pydantic_api/templates/: rapidoc.html
scripts/: format.sh  lint.sh  test.sh
tests/: test_api_wrapper.py  test_enhanced_serializer.py  test_file_upload.py  test_openapi.py  test_utils.py  utils.py
