[metadata]
name = flask-pydantic-api
version = 0.9.3
description = Pydantic based API support for Flask
long_description = file: README.md
long_description_content_type = text/markdown
author = Adam Sussman
author_email = adam.sussman@gmail.com
url = https://github.com/adamsussman/flask-pydantic-api
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pydantic
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet

python_requires = >= 3.8

[options]
packages = flask_pydantic_api
install_requires =
    asgiref >= 3.6
    flask >= 2.2
    pydantic >= 1.8
    openapi_schema_pydantic >= 1.2

[options.extras_require]
serializer =
    pydantic_enhanced_serializer
test =
    pytest
    pytest-cov
dev =
    mypy
    black
    ipdb
    isort
    flake8
    flake8-bugbear
    flake8-debugger
    types-setuptools

[options.package_data]
flask_pydantic_api = py.typed, templates/*.html

[tool:pytest]
addopts = --cov=flask_pydantic_api --no-cov-on-fail -s

[coverage:report]
fail_under: 85
show_missing: True
omit: */__init__.py

[tool:isort]
profile = black
multi_line_output = 3
include_trailing_comma = True

[flake8]
max-line-length = 100
